--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot -prod",
+    "start": "node server.js"
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "~7.2.0",
+    "@angular/compiler-cli": "~7.2.0",
     "@angular/animations": "^7.2.1",
     "@angular/cdk": "^7.2.1",
     "@angular/common": "~7.2.0",
@@ -32,9 +35,7 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.12.0",
-    "@angular/cli": "~7.2.0",
-    "@angular/compiler-cli": "~7.2.0",
+    "@angular-devkit/build-angular": "~0.12.0",    
     "@angular/language-service": "~7.2.0",
     "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
@@ -63,5 +64,9 @@
   "bugs": {
     "url": "https://github.com/pranjalsaxena10/TO-DO/issues"
   },
-  "homepage": "https://github.com/pranjalsaxena10/TO-DO#readme"
+  "homepage": "https://github.com/pranjalsaxena10/TO-DO#readme",
+  "engines": {
+    "node": "8.9.4",
+    "npm": "5.6.0"
+  }
 }
